--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Heading Index Page</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, voluptatum. Quo deleniti cupiditate, odit
+    <p>Master ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, voluptatum. Quo deleniti cupiditate, odit
         ad non necessitatibus et nesciunt optio maiores, possimus eos, exercitationem perspiciatis iste quos
         voluptatibus similique autem.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, voluptatum. Quo deleniti cupiditate, odit
